<resources>
    <string name="app_name">Muneem</string>
    <string name="title_activity_transactions">TransactionsActivity</string>
    <string name="transactions">Transactions</string>
    <string name="analysis">Analysis</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="amount">Amount</string>
    <string name="notes">Notes</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="comment">Comment</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_type">Category Type</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="select_color">Select Color</string>
    <string name="color">Color</string>


    <string-array name="random">
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
    </string-array>

    <string-array name="desc">
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
        <item>Mayank</item>
    </string-array>

    <string-array name="amount">
        <item>10000</item>
        <item>1000010000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
        <item>10000</item>
    </string-array>


    <string-array name="cat">
        <item>Personal</item>
        <item>Miscellaneous</item>
        <item>Travel</item>
        <item>Food</item>
        <item>Shopping</item>
        <item>EMIs</item>
        <item>Extra</item>
        <item>Rent</item>
        <item>Personal</item>
        <item>Miscellaneous</item>
        <item>Travel</item>
        <item>Food</item>
        <item>Shopping</item>
        <item>EMIs</item>
    </string-array>

</resources>
