<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/catDialog">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/category_name"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_cat_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/category_name"
            android:textSize="24sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/category_type"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/type"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/expense"
                android:text="@string/expense"
                android:background="@android:color/holo_red_light"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/income"
                android:text="@string/income"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <TextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/select_color"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_light"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/new_trans"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:text="@string/add"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

    </LinearLayout>



</LinearLayout>